subprojects/groovy-parser-antlr4/src/test/resources/fail/Super_01x.groovy
class A {
    A(int a) {
        println a
        super(123)
    }
}